methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:11: error: too many arguments for method apply: (i: Int)Array[java.awt.Color] in class Array
      if(pattern(j, i) != Color.white) {
                ^PatternPicture:18: error: not found: type int
def colorier(x:Int, y:int, c:Color) {
                      ^PatternPicture:12: error: too many arguments for method apply: (i: Int)Array[java.awt.Color] in class Array
        colorier(j, i, pattern(j, i))
                              ^